sandbox/sandbox.css
/* ... */
.member-detail .info-panel .skill {
    display: flex;
    margin-top: 7px;
    margin-bottom: 6px;
    font-size: 21px;
    padding-right: 10px;
}

.member-detail .info-panel .skill .label {
    color: #5a7e8d;
    font-weight: 600;
    min-width: 53px;
}

.member-detail .info-panel .skill .content {
    font-size: 18px;
    line-height: 21px;
}

.member-detail .info-panel .status-bar {
    display: flex;
    gap: 2px;
}

.member-detail .info-panel .status-bar .status {
    width: 114px;
    height: 36px;
    border-radius: 18px;
    background-color: #bfbfbf;
    text-align: center;
    position: relative;
    left: 2px;
    font-family: "status-number";
    font-size: 28px;
    padding-top: 1px;
    margin-bottom: 4px;
}

.member-detail .info-panel .status-bar .stamina {
    width: 78px;
    left: 0px;
}

.member-detail .info-panel .status-bar .smile {
    background-color: #fcc9d1;
    color: #f9639d;
}

.member-detail .info-panel .status-bar .pure {
    background-color: #99e6d8;
    color: #06c32c;
}

.member-detail .info-panel .status-bar .cool {
    background-color: #70d0eb;
    color: #09e;
}

.member-detail .info-panel .line {
    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAECAYAAAC3OK7NAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAARUlEQVQImWP8dePx/89z9zAwMDAw8Ca7MLCqyzBgA0yf5+5h+P/tJ8P/bz8ZYBoYGBgYPk3ewvBp8haEQqzasQBGYq0GAKiwHOX3KQ6GAAAAAElFTkSuQmCC);
    height: 4px;
    width: 424px;
}

.member-detail .info-panel .school-idol-skill {
    height: 63px;
    text-align: center;
}

.button-back {
    display: inline-block;
    background-color: #fff;
    padding: 2px;
    border-radius: 27px;
    cursor: pointer;
    position: absolute;
    left: 90px;
}

.button-back .inner {
    box-sizing: border-box;
    width: 75px;
    height: 46px;
    border-radius: 23px;
    background-color: #f69;
    display: flex;
    align-items: center;
    color: #fff;
    font-weight: bold;
    letter-spacing: -7px;
    padding-left: 6px;
    font-size: 20px;
}

.button-back .inner:hover {
    background-color: #f7a;
}

.button {
    display: inline-block;
    margin: 0px 2px;
    background-color: #fff;
    overflow: hidden;
    position: relative;
    clip-path: polygon(0 15px, 0 100%, 100% 100%, 100% 0, 15px 0);
    border-radius: 18px 8px 8px 8px;
    padding: 2px;
}

.button:hover .inner {
    background-color: var(--button-hover-color) !important;
    cursor: pointer;
}

.button .inner {
    box-sizing: border-box;
    position: relative;
    width: 118px;
    height: 57px;
    background-color: #7ea;
    padding: 2px;
    clip-path: polygon(0 15px, 0 100%, 100% 100%, 100% 0, 15px 0);
    border-radius: 18px 8px 8px 8px;
}

.button .inner .label {
    box-sizing: border-box;
    background-color: #fff;
    color: #636363;
    text-shadow: #fafae9 0px 0px 2px;
    width: 114px;
    height: 24px;
    position: absolute;
    bottom: 2px;
    border-radius: 0px 0px 5px 5px;
    padding-top: 2px;
    font-size: 19px;
    text-align: center;
}

.button-common {
    box-sizing: border-box;
    width: 205px;
    height: 61px;
    border-radius: 7px;
    background-color: #fff;
    padding: 2px;
    clip-path: polygon(0 16px, 0 100%, calc(100% - 16px) 100%, 100% calc(100% - 16px), 100% 0, 16px 0);
    cursor: pointer;
}

.button-common:hover .layer-0, .button-common:hover .layer-2 {
    background-color: var(--hover-color);
}

.button-common .layer-0 {
    box-sizing: border-box;
    padding: 2px;
    width: 100%;
    height: 57px;
    border-radius: 6px;
    background-color: var(--button-color);
    clip-path: polygon(0 var(--cut-0), 0 100%, calc(100% - var(--cut-0)) 100%, 100% calc(100% - var(--cut-0)), 100% 0, var(--cut-0) 0);
}

.button-common .layer-1 {
    box-sizing: border-box;
    padding: 2px;
    width: 100%;
    height: 53px;
    border-radius: 5px;
    background-color: #fff;
    clip-path: polygon(0 var(--cut-1), 0 100%, calc(100% - var(--cut-1)) 100%, 100% calc(100% - var(--cut-1)), 100% 0, var(--cut-1) 0);
}

.button-common .layer-2 {
    box-sizing: border-box;
    width: 100%;
    height: 35px;
    border-radius: 4px;
    background-color: var(--button-color);
    clip-path: polygon(0 var(--cut-2), 0 100%, 100% 100%, 100% 0, var(--cut-1) 0);
    display: flex;
    align-items: center;
    color: var(--font-color);
    font-weight: bold;
    padding-left: 20px;
    text-shadow: 
        -1px -1px 0px #fff,
         0px -1px 0px #fff,
         1px -1px 0px #fff,
        -1px  0px 0px #fff,
         1px  0px 0px #fff,
        -1px  1px 0px #fff,
         0px  1px 0px #fff,
         1px  1px 0px #fff;
}

.menu-bar {
    width: 100%;
    position: absolute;
    bottom: 0px;
    height: 64px;
    text-align: center;
}

.card-icon {
    box-sizing: border-box;
    display: inline-block;
    width: 105px;
    height: 105px;
    border: solid 6px #42cd09;
    border-radius: 50%;
    background-origin: border-box;
    background-image: url("https://raw.githubusercontent.com/kotori-archive/resource-card/main/image/3563_0.png");
    cursor: pointer;
}

.card-icon .inner {
    box-sizing: border-box;
    width: 93px;
    height: 93px;
    border-radius: 50%;
    border: solid 1px #fff;
    background-color: rgb(0, 0, 0, 0);
}

.card-icon::after {
    display: inline-block;
    background-image: url("https://raw.githubusercontent.com/kotori-archive/resource-image/main/rarity_badge/smile_ur.png");
    width: 34px;
    height: 29px;
    /* content: ""; */
    position: relative;
    top: -98px;
    left: -6px;
    background-repeat: no-repeat;
    background-size: cover;
}

.interface-name {
    box-sizing: border-box;
    position: absolute;
    top: 0px;
    left: 100px;
    background-color: #fff;
    width: 330px;
    height: 40px;
    border: solid 2px #ec6b98;
    border-radius: 20px;
    padding-left: 76px;
    font-size: 22px;
    padding-top: 7px;
}

body {
    background-color: #b2b4b2;
}

.hide {
    visibility: hidden;
}
/* ... */

